# prog2P01

./: CMakeLists.txt  CSVLoader.cpp  CSVLoader.h  InvalidOperationException.cpp  InvalidOperationException.h  JSONLoader.cpp  JSONLoader.h  Loader.cpp  Loader.h  Node.cpp  Node.h  csvwriter.cpp  csvwriter.h  jsonwriter.cpp  jsonwriter.h  main.cpp  node.cpp  stack.cpp  stack.h  untitled.pro  writer.cpp  writer.h  xmlloader.cpp  xmlloader.h  xmlwriter.cpp  xmlwriter.h
XML_test_files/: valid3.xml
output/: valid1.json  valid2.json  valid3.json
